fix dropdown behind divs

--- a/frontend/src/components/SpotDetail/SpotDetail.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.css
@@ -2,7 +2,6 @@
   flex-grow: 1fr;
   height: 100%;
   width: 33%;
-  position: relative;
 }
 
 .coverage-red {
@@ -62,7 +61,6 @@
   max-width: 1120px;
   width: 100%;
   height: 100%;
-  position: relative;
 }
 
 .fake-coverage-container {
